# WhoLockThis

./: CMakeLists.txt  LICENSE  README.md  installer.nsi  main.cpp  process_finder.cpp  process_finder.h
.claude/: settings.local.json
